welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:6: error: ';' expected but ',' found.
	leveBrosse(),setCouleurBrosse(Color.YELLOW);avance();baisseBrosse()
                    ^